    have the serverminver mechanism.
  * To avoid having to binNMU all drivers to update their Depends from
    xorg-*-abi-$MAJOR-$MINOR to xorg-*-abi-$MAJOR, add xorg-video-abi-8.0
    and xorg-input-abi-11.0 to the server's Provides temporarily (until
    the next ABI bump).
  * Add ${videoabi}, ${inputabi} to the udeb's Provides. There's no reason
    for udebs to have loose dependencies.

 -- Cyril Brulebois <kibi@debian.org>  Tue, 01 Feb 2011 15:01:20 +0100

xorg-server (2:1.9.3.902-1) experimental; urgency=low

  * New upstream release (1.9.4 rc2).
  * Improve bug script:
    - Stop reporting about roster and checksum for config file and server
      symlink, they are no longer used.
    - Replace printf with echo everywhere, it's slightly more readable and
      all lines are newline-terminated anyway.
    - Also use a “pecho” (pretty echo) function to underline some strings,
      making the output slightly more readable.
    - Fix listing xorg.conf.d's contents. Previously, that was only done
      if xorg.conf existed.
    - Check for local libraries by running ldd on the server.
    - Check for obsolete libraries in the same way (/usr/X11R6/lib might
      still exist in some cases, and be referenced in /etc/ld.so.conf, so
      using ldd is sufficient to find out, see #546836 for an example).

 -- Cyril Brulebois <kibi@debian.org>  Mon, 31 Jan 2011 14:00:41 +0100

xorg-server (2:1.9.3.901-1) experimental; urgency=low

  * New upstream release (1.9.4 rc1).

 -- Cyril Brulebois <kibi@debian.org>  Sun, 09 Jan 2011 03:10:13 +0100

xorg-server (2:1.9.2.902-1) experimental; urgency=low

  * New upstream release (1.9.3 rc2).
  * Drop 06_dont_trap_access_to_timer_and_keyboard.diff, merged upstream.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 05 Dec 2010 02:16:14 +0100

xorg-server (2:1.9.2-1) experimental; urgency=low

  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 10 Nov 2010 00:10:19 +0100
